--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -26,12 +26,12 @@ jobs:
         tar zxvf bats-core-1.2.1.tar.gz
         cd bats-core-1.2.1 &&
         sudo ./install.sh /usr/local
-    - name: install uncrustify X64
+    - name: install uncrustify ${{ runner.arch }} == X64 
       if: runner.arch == "X64"
       run: |
         curl -LO http://launchpadlibrarian.net/516341795/uncrustify_0.72.0+dfsg1-2_amd64.deb
         sudo dpkg -i uncrustify_0.72.0+dfsg1-2_amd64.deb || true
-    - name: install uncrustify ARM64
+    - name: install uncrustify ${{ runner.arch }} == ARM64
       if: runner.arch == "ARM64"
       run: |
         curl -LO http://launchpadlibrarian.net/516341795/uncrustify_0.72.0+dfsg1-2_arm64.deb
