--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -2,15 +2,15 @@ name: run test cases
 
 on:
   push:
-    branches: [master, develop]
+    branches: [main, develop]
   pull_request:
-    branches: [master, develop]
+    branches: [main, develop]
 
 jobs:
   testing:
     strategy:
       matrix:
-        os: [ubuntu-22.04, ubuntu-24.04]
+        os: [ubuntu-22.04, ubuntu-24.04, ubuntu-24.04-arm]
         compiler: [gcc, clang]
 
     runs-on: ${{ matrix.os }}
@@ -26,10 +26,16 @@ jobs:
         tar zxvf bats-core-1.2.1.tar.gz
         cd bats-core-1.2.1 &&
         sudo ./install.sh /usr/local
-    - name: install uncrustify
+    - name: install uncrustify ${{ runner.arch }} == X64 
+      # if: runner.arch == "X64"
       run: |
         curl -LO http://launchpadlibrarian.net/516341795/uncrustify_0.72.0+dfsg1-2_amd64.deb
         sudo dpkg -i uncrustify_0.72.0+dfsg1-2_amd64.deb || true
+    - name: install uncrustify ${{ runner.arch }} == ARM64
+      # if: runner.arch == "ARM64"
+      run: |
+        curl -LO http://launchpadlibrarian.net/516341795/uncrustify_0.72.0+dfsg1-2_arm64.deb
+        sudo dpkg -i uncrustify_0.72.0+dfsg1-2_arm64.deb || true
     - name: build packcc
       run: |
         (
